# azure-sdk-for-c-hfsm

./: CHANGELOG.md  CMakeLists.txt  README.md  emitter-design.md  push-pull-iterators.md
.github/: CODEOWNERS
eng/: vcpkg-commit.txt
eng/pipelines/templates/jobs/: archetype-sdk-client.yml
poc/keyvault/: CMakeLists.txt
sdk/core/: serialization.md
sdk/core/core/: CMakeLists.txt
sdk/core/core/inc/: az_http_pipeline.h  az_span.h
sdk/core/core/src/: az_http_request.c
sdk/docs/core/: az_event_pipeline.md  az_hfsm.md  az_mqtt.md  rpc_client.puml  rpc_client_parse_rsp.puml
sdk/docs/core/resources/: core_az_mqtt.puml  core_event_pipeline.puml  core_hfsm_architecture.puml  core_hfsm_pipeline_architecture.puml
sdk/docs/iot/: README.md  hfsm.md
sdk/docs/iot/resources/: az_iot_hfsm.puml  az_iot_hfsm_connection.puml  az_iot_hfsm_hub.puml  az_iot_hfsm_mqtt.puml  az_iot_hfsm_mqtt_mosquitto.puml  az_iot_hfsm_no_dps.puml  az_iot_hfsm_provisioning.puml  az_iot_hfsm_sync_adapter.puml  az_iot_orchestration_hfsm.puml  az_iot_pipeline.puml  az_iot_pipeline_per_endpoint.puml  iot_hfsm.puml  iot_hfsm_connection.puml  iot_hfsm_provisioning.puml  iot_hsm.puml  iot_hsm_hub.puml  iot_hsm_mqtt.puml  iot_hsm_provisioning.puml  iot_hsm_testhsm.puml  vscode_hfsm_snippet.json  z_az_iot_pipeline_single.puml
sdk/identity/identity/: CMakeLists.txt
sdk/inc/azure/: az_iot.h
sdk/inc/azure/core/: az_config.h  az_credentials.h  az_credentials_x509.h  az_event.h  az_event_policy.h  az_hfsm.h  az_hfsm_dispatch.h  az_hfsm_pipeline.h  az_json.h  az_log.h  az_mqtt.h  az_mqtt5.h  az_mqtt5_rpc_client.h  az_mqtt5_rpc_server.h  az_mqtt_connection_policy.h  az_platform.h  az_result.h
sdk/inc/azure/iot/: az_iot_common.h  az_iot_connection.h  az_iot_connection_policy.h  az_iot_provisioning_client.h  az_iot_provisioning_v2_client.h  az_iot_sm_device_orchestration.h  az_iot_sm_mqtt_wrapper.h  az_iot_sm_provisioning_client-singlecbk.h  az_iot_sm_provisioning_client.h  az_mqtt_rpc_server.h
sdk/inc/azure/platform/: az_mqtt5_mosquitto.h  az_mqtt_mosquitto.h  az_mqtt_notransport.h  az_mqtt_paho.h  az_mqtt_platform.h  az_platform_none.h  az_platform_posix.h
sdk/iot/docs/: mqtt_state_machine.md
sdk/iot/docs/resources/: iot_provisioning_flow.puml
sdk/iot/hub/inc/: az_iot_hub_client.h
sdk/iot/inc/: az_iot_hub_c2d.h  az_iot_hub_client.h  az_iot_hub_client_c2d.h  az_iot_hub_client_methods.h  az_iot_hub_client_properties.h  az_iot_hub_client_sas.h  az_iot_hub_client_telemetry.h  az_iot_hub_client_twin.h  az_iot_hub_connect.h  az_iot_hub_connect_sas.h  az_iot_hub_methods.h  az_iot_hub_properties.h  az_iot_hub_sas.h  az_iot_hub_telemetry.h  az_iot_hub_twin.h  az_iot_mqtt.h  az_iot_provisioning_client.h  az_iot_provisioning_client_register.h  az_iot_provisioning_client_sas.h  az_iot_provisioning_connect.h  az_iot_provisioning_connect_sas.h  az_iot_provisioning_register.h  az_iot_provisioning_sas.h  az_iot_retry.h  az_iot_status.h
sdk/iot/provisioning/inc/: az_iot_provisioning_client.h
sdk/iot/provisioning/src/: az_iot_provisioning_client.c
sdk/iot/samples/paho/: iot_hub_paho_sample.c  iot_provisioning_paho_sample.c
sdk/keyvault/keyvault/: CMakeLists.txt
sdk/keyvault/keyvault/inc/: az_keyvault_key_bundle_builder.h
sdk/keyvault/keyvault/src/: az_keyvault_key_bundle_builder.c
sdk/samples/core/: CMakeLists.txt  az_log_listener.h  mosquitto_dual_rpc_server_sample.c  mosquitto_rpc_2_client_sample.c  mosquitto_rpc_client_sample.c  mosquitto_rpc_server_codec_sample.c  mosquitto_rpc_server_sample.c  mosquitto_rpc_server_two_cmds_sample.c
sdk/samples/iot/: CMakeLists.txt  README.md  iot_sample_common.c  iot_sample_common.h  paho_iot_csr_trustbundle_sample.c  paho_iot_provisioning_sample.c  paho_iot_provisioning_v2_sample.c  paho_iot_sample.c  paho_sync_sample.c
sdk/samples/iot/iot/: az_iot_hfsm.c  az_iot_hfsm.h  paho_iot_provisioning.c
sdk/samples/iot/reference/: CMakeLists.txt
sdk/samples/iot/reference/src/: hsm_example.c  paho_iot_reference_example.c
sdk/samples/iot/reference/src/reference/: az_iot_hsm_mqtt.c  az_iot_hsm_mqtt_pal_paho.c
sdk/samples/iot/state_machine/: paho_iot_state_machine_example.c
sdk/samples/iot_compat/: CMakeLists.txt  iothub_ll_client_x509_sample.c  prov_dev_client_ll_x509_sample.c
sdk/samples/iot_mosquitto/: CMakeLists.txt  az_iot_sm_provisioning_sample-singlecbk.c  az_iot_sm_provisioning_sample.c  az_iot_sm_provisioning_sample_option2.c  az_log_listener.h  mosquitto_async_sample.c  mosquitto_hfsm_sample.c  mosquitto_iot_sample.c  mosquitto_iot_sample_connect.c  mosquitto_rpc_server_sample.c  mosquitto_sample_connect.c
sdk/src/azure/core/: CMakeLists.txt  az_event_pipeline.c  az_hfsm.c  az_hfsm_dispatch.c  az_hfsm_mqtt.c  az_hfsm_pipeline.c  az_hfsm_timer.c  az_json_reader.c  az_mqtt5_rpc_client_hfsm.c  az_mqtt5_rpc_client_pending_commands.c  az_mqtt5_rpc_server.c  az_mqtt5_rpc_server_hfsm.c  az_mqtt5_rpc_server_pending_commands.c  az_mqtt_policy.c
sdk/src/azure/iot/: CMakeLists.txt  TODO_az_iot_hfsm_sync_adapter.c  az_iot_connection.c  az_iot_connection_hfsm.c  az_iot_connection_policy.c  az_iot_hfsm.c  az_iot_hfsm_sync_adapter.c  az_iot_hsm_common.c  az_iot_hub_hfsm.c  az_iot_provisioning_client.c  az_iot_provisioning_hfsm.c  az_iot_provisioning_v2_client.c  az_iot_provisioning_v2_client_sas.c  az_iot_retry_hfsm.c  az_iot_sm_provisioning_client.c  az_iot_subclients_policy.c  az_mqtt_rpc_server_hfsm.c
sdk/src/azure/iot/compat/: CMakeLists.txt  csdk_common_adapter.c  csdk_iothub_device_client_ll_adapter.c  csdk_prov_device_client_ll_adapter.c
sdk/src/azure/platform/: CMakeLists.txt  az_mosquitto-hfsm.c  az_mosquitto.c  az_mosquitto5.c  az_mqtt5_policy.c  az_mqtt_policy.c  az_noplatform.c  az_paho.c  az_platform_sync.c  az_posix.c  az_win32.c
sdk/tests/core/: CMakeLists.txt  az_test_definitions.h  main.c  test_az_hfsm.c  test_az_hfsm_pipeline.c  test_az_platform_mock.c
sdk/tests/iot/common/: CMakeLists.txt  main.c  test_az_iot_hsm.c  test_az_iot_hsm.h  test_az_iot_hsm_stack.c  test_az_iot_hsm_stack.h  (+2 more)
sdk/tests/platform/: main.c  test_az_platform.c
(+62 files in other folders)
